<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addnewworksiteform.AddNewWorksiteFormFragment">

        <TextView
            android:id="@+id/worksiteform_tv_worksiteNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_worksiteNameLabel"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/worksiteform_et_worksiteName"
            app:layout_constraintStart_toStartOf="@+id/worksiteform_et_worksiteName" />

        <EditText
            android:id="@+id/worksiteform_et_worksiteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:ems="15"
            android:hint="@string/hint_worksiteName"
            android:inputType="textEmailAddress"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/worksiteform_tv_startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_startDateLabel"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/worksiteform_et_startDate"
            app:layout_constraintStart_toStartOf="@+id/worksiteform_et_startDate" />

        <EditText
            android:id="@+id/worksiteform_et_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="15"
            android:hint="@string/hint_startDate"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/worksiteform_et_worksiteName" />

        <TextView
            android:id="@+id/worksiteform_tv_endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_endDateLabel"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/worksiteform_et_endDate"
            app:layout_constraintStart_toStartOf="@+id/worksiteform_et_endDate" />

        <EditText
            android:id="@+id/worksiteform_et_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="15"
            android:hint="@string/hint_endDate"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/worksiteform_et_startDate" />

        <TextView
            android:id="@+id/worksiteform_tv_locationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_locationLabel"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/worksiteform_et_location"
            app:layout_constraintStart_toStartOf="@+id/worksiteform_et_location" />

        <EditText
            android:id="@+id/worksiteform_et_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="15"
            android:hint="@string/hint_location"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/worksiteform_et_endDate" />

        <Button
            android:id="@+id/worksitrform_bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bt_formAdd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/worksiteform_et_location"
            app:strokeWidth="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>