<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".addworker.AddWorkerFragment">

        <ImageView
            android:id="@+id/addworker_iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/addworker_tv_nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/tv_nameLabel"
            app:layout_constraintEnd_toStartOf="@+id/addworker_sp_worksiteSpinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <EditText
            android:id="@+id/addworker_et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_name"
            app:layout_constraintBottom_toBottomOf="@+id/addworker_tv_nameLabel"
            app:layout_constraintStart_toStartOf="@+id/addworker_et_phoneNumber"
            app:layout_constraintTop_toTopOf="@+id/addworker_tv_nameLabel" />

        <TextView
            android:id="@+id/addworker_tv_phoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_phoneNumberLabel"
            app:layout_constraintEnd_toEndOf="@+id/addworker_tv_nameLabel"
            app:layout_constraintTop_toBottomOf="@+id/addworker_tv_nameLabel" />

        <EditText
            android:id="@+id/addworker_et_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/hint_phoneNumber"
            app:layout_constraintBottom_toBottomOf="@+id/addworker_tv_phoneNumberLabel"
            app:layout_constraintStart_toStartOf="@+id/addworker_et_password"
            app:layout_constraintTop_toTopOf="@+id/addworker_tv_phoneNumberLabel" />

        <TextView
            android:id="@+id/addworker_tv_passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_passwordLabel"
            app:layout_constraintEnd_toEndOf="@+id/addworker_tv_phoneNumberLabel"
            app:layout_constraintTop_toBottomOf="@+id/addworker_tv_phoneNumberLabel" />

        <EditText
            android:id="@+id/addworker_et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_password"
            app:layout_constraintBottom_toBottomOf="@+id/addworker_tv_passwordLabel"
            app:layout_constraintStart_toStartOf="@+id/addworker_et_accidentHistory"
            app:layout_constraintTop_toTopOf="@+id/addworker_tv_passwordLabel" />

        <TextView
            android:id="@+id/addworker_tv_accidentHistoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_accidentHistoryLabel"
            app:layout_constraintEnd_toEndOf="@+id/addworker_tv_passwordLabel"
            app:layout_constraintTop_toBottomOf="@+id/addworker_tv_passwordLabel" />

        <EditText
            android:id="@+id/addworker_et_accidentHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_accidentHistory"
            app:layout_constraintBottom_toBottomOf="@+id/addworker_tv_accidentHistoryLabel"
            app:layout_constraintStart_toStartOf="@+id/addworker_et_memo"
            app:layout_constraintTop_toTopOf="@+id/addworker_tv_accidentHistoryLabel" />

        <TextView
            android:id="@+id/addworker_tv_memoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_memoLabel"
            app:layout_constraintEnd_toEndOf="@+id/addworker_tv_accidentHistoryLabel"
            app:layout_constraintTop_toBottomOf="@+id/addworker_tv_accidentHistoryLabel" />

        <EditText
            android:id="@+id/addworker_et_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/hint_memo"
            app:layout_constraintBottom_toBottomOf="@+id/addworker_tv_memoLabel"
            app:layout_constraintStart_toStartOf="@+id/addworker_sp_worksiteSpinner"
            app:layout_constraintTop_toTopOf="@+id/addworker_tv_memoLabel" />

        <TextView
            android:id="@+id/addworker_tv_worksiteNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_worksiteNameLabel"
            app:layout_constraintEnd_toEndOf="@+id/addworker_tv_memoLabel"
            app:layout_constraintTop_toBottomOf="@+id/addworker_tv_memoLabel" />

        <Spinner
            android:id="@+id/addworker_sp_worksiteSpinner"
            android:layout_width="210dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/addworker_tv_worksiteNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/addworker_tv_nameLabel"
            app:layout_constraintTop_toTopOf="@+id/addworker_tv_worksiteNameLabel" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <Button
            android:id="@+id/addworker_bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bt_formAdd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addworker_sp_worksiteSpinner" />

        <Button
            android:id="@+id/addworker_bt_takePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_takePicture"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addworker_bt_importPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_importPicture"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addworker_bt_takePicture" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>